===============================
VERSION 8
===============================

Features:
- Hard Surface Solid Template added to Shift+A menu, for creating solidified hard surfaces.
- Hard Surface Solid modify style added to the BY-GEN Modify panel.
    - Allow Mirror boolean added as a property for the panel.
    - Invert solidify operator created and added as a button in the modify panel.
      Intended to be used to reverse the thickness of the solidify modifier for the
      Hard Surface Solid mode when adding it to pre-existing objects.
- New panels created in the scene properties tab for loading template content, intended 
to help users build their own generation tools.
- Demo blend files have been included in the package under the resources folder which will
provide users with a template to build generation tools from, making use of the in-build
structural generation algorithms. Added:
    - demo_space_station (Branched)
    - demo_mech (Layered)
    - demo_weapon (Layered)
    - demo_city_circular (City Scatter)
    - demo_city_rectangular (City Scatter)
- New 'Scattering' panel added to the toolbar for calling the available city scattering methods.

Changes:
- Cubic and spherical field generate operators have been added to the BY-GEN - Generate panel.
- Interpreter has been removed from the addon as its usefulness is redundant when considering
different ways to serialize content and the future direction of Blender.
- Layered and branched generation operators have been moved to a new 'algorithms' folder.
- Code files have been re-organized with region folding for easier navigation.
- EasyBPY is now packaged with the addon in the modules folder.
- Menu code moved from __init__ to menus.py
- 'Check documentation for instructions' label removed from Structured Generation toolbar panel.
It has been replaced with 'Import template content in scene properties'.
- Scattering options have been removed from the Shift+A menu because they don't make sense there.

Fixes: 