@@ -6,6 +6,8 @@ Features:
 - Hard Surface Solid Template added to Shift+A menu, for creating solidified hard surfaces.
 - Hard Surface Solid modify style added to the BY-GEN Modify panel.
     - Allow Mirror boolean added as a property for the panel.
+      Setting this to true will also check to see if a 'World Origin' or 'WorldOrigin'
+      object exists, and if it does, then it automateically sets it as the mirror object.
     - Invert solidify operator created and added as a button in the modify panel.
       Intended to be used to reverse the thickness of the solidify modifier for the
       Hard Surface Solid mode when adding it to pre-existing objects.
